<?xml version="1.0"?>
<package format="2">
  <name>joint_trajectory_ros_bridge</name>
  <version>0.0.0</version>
  <description>The joint_trajectory_ros_bridge package</description>

  <maintainer email="yoshioka@jsk.imi.i.u-tokyo.ac.jp">Hiroki Yoshioka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>control_msgs</depend>
  <depend>pr2_controllers_msgs</depend>
  <depend>choreonoid</depend>
  <depend>sequence_player</depend>
</package>
