<?xml version="1.0"?>
<package format="2">
  <name>seq_state_ros_bridge</name>
  <version>0.0.0</version>
  <description>The seq_state_ros_bridge package</description>

  <maintainer email="yoshioka@jsk.imi.i.u-tokyo.ac.jp">Hiroki Yoshioka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>hrpsys</depend>
  <depend>actionlib</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pr2_controllers_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>tf</depend>
  <depend>choreonoid</depend>
  <depend>sequence_player</depend>
  <depend>robot_hardware</depend>
</package>
